--- a/index.html
+++ b/index.html
@@ -17,34 +17,33 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
-<section>
-    <h1>Сайн уу! Намайг Мөнхжаргал гэдэг 16 настай</h1>
-    <p>Ирээдүйн вэб хөгжүүлэгч ✨</p>
-    </section>
-  <section class="about" id="about">
-    <h2>🌸 Миний тухай</h2>
-    <p>Би HTML, CSS сураад эхэлж байгаа. Одоохондоо код бичихдээ сайн биш ч гэлээ хичээж байгаа.Амжилт кибэр сүргүүлийн 11-1 ангийн сурагч. 9-р ангидаа анх орж ирж код бичиж эхэлсэн. </p>
-     <img src="Zur4g.jfif" alt="profile" class="profile-img">
-  </section>
+<section class="about" id="about">
+  <h2>🌸 Миний тухай</h2>
+  <div class="about-content">
+    <div class="about-text">
+      <p>Би HTML, CSS сураад эхэлж байгаа. Одоохондоо код бичихдээ сайн биш ч гэлээ хичээж байгаа. Амжилт кибэр сургуулийн 11-1 ангийн сурагч. 9-р ангидаа анх орж ирж код бичиж эхэлсэн.</p>
+    </div>
+    <img src="Zur4g.jfif" alt="profile" class="profile-img" />
+  </div>
+</section>
 
   <section class="hobbies" id="hobbies">
-    <h2>🎀 Хоббинуудаа танилцуулъя</h2>
-    <ul>
-      <li>🎨 Зураг зурах</li>
-      <li>🎮 Тоглоом тоглох</li>
-      <li>🏐 Воллейбол тоглох</li>
-      <li>💃 Бүжиглэх</li>
-    </ul>
-  </section>
+  <h2>🎀 Хоббинуудаа танилцуулъя</h2>
+  <ul class="hobby-list">
+    <li><img src="draww.png.jfif" alt="drawing"> Зураг зурах</li>
+    <li><img src="game.png.jfif" alt="gaming"> Тоглоом тоглох</li>
+    <li><img src="volleyball.png.jfif" alt="volleyball"> Воллейбол тоглох</li>
+    <li><img src="dance.png.jfif" alt="dancing"> Бүжиглэх</li>
+  </ul>
+</section>
    <section class="skills" id="skills">
-    <h2>🎀 Миний хувийн чадварууд</h2>
-    <ul>
-      <li>Хятад хэлтэй ба албан ёсны HSK 4 оноотой</li>
-      <li>Англи хэлтэй бага зэрэг ярина</li>
-      <li>Тодорхой хэмжээнд HTML , CSS , JavaScript мэднэ</li>
-      <li></li>
-    </ul>
-  </section>
+  <h2>🎀 Миний хувийн чадварууд</h2>
+  <ul class="skills-list">
+    <li><img src="chinese.png.jfif" alt="Chinese"> Хятад хэлтэй ба албан ёсны HSK 4 оноотой</li>
+    <li><img src="english.png.jfif" alt="English"> Англи хэлтэй бага зэрэг ярина</li>
+    <li><img src="code.png.jfif" alt="Coding"> HTML , CSS , JavaScript мэднэ</li>
+  </ul>
+</section>
 
   <section class="projects" id="projects">
     <h2>💻 Миний анхны төслүүд</h2>
@@ -56,8 +55,12 @@
 
   <section class="contact" id="contact">
     <h2>📬 Холбоо барих</h2>
+    <div class="contact-box">
     <p>Email: monhjargalmoojaa12@gmail.com</p>
     <p>Phone:94831112</p>
+    <p>Instagram:yuuki__ssu</p>
+    <p>Facebook:Monh Jargal</p>
+    </div>
   </section>
 
 </body>
